[gd_scene load_steps=12 format=2]

[ext_resource path="res://Battle/Battle.gd" type="Script" id=1]
[ext_resource path="res://Battle/AnimationManager.gd" type="Script" id=2]
[ext_resource path="res://Battle/Players.gd" type="Script" id=3]
[ext_resource path="res://Battle/Entity_Battle.tscn" type="PackedScene" id=4]
[ext_resource path="res://Battle/Log.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Shaders/Smooth.gd" type="Script" id=6]
[ext_resource path="res://Battle/Interface.gd" type="Script" id=7]
[ext_resource path="res://Assets/Panels/Menu_Info_Panel.tres" type="StyleBox" id=8]
[ext_resource path="res://Battle/Menus/ActionButton.tscn" type="PackedScene" id=9]
[ext_resource path="res://Battle/Menus/Player_Info.tscn" type="PackedScene" id=10]


[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 )
}

[node name="Battle" type="Node2D"]
script = ExtResource( 1 )

[node name="AnimationManager" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="Players" type="Button" parent="AnimationManager"]
margin_left = 175.0
margin_top = 140.0
margin_right = 975.0
margin_bottom = 940.0
rect_scale = Vector2( 0.75, 0.75 )
focus_neighbour_right = NodePath("../Enemies")
disabled = true
flat = true
script = ExtResource( 3 )

[node name="P0" parent="AnimationManager/Players" instance=ExtResource( 4 )]
margin_left = 300.0
margin_top = 75.0
margin_right = 312.0
margin_bottom = 95.0
focus_neighbour_top = NodePath("../P3")
focus_neighbour_right = NodePath("../../Enemies/E0")
focus_neighbour_bottom = NodePath("../P1")
Player = true

[node name="P1" parent="AnimationManager/Players" instance=ExtResource( 4 )]
margin_left = 300.0
margin_top = 300.0
margin_right = 312.0
margin_bottom = 320.0
focus_neighbour_top = NodePath("../P0")
focus_neighbour_right = NodePath("../../Enemies/E1")
focus_neighbour_bottom = NodePath("../P2")
Player = true

[node name="P2" parent="AnimationManager/Players" instance=ExtResource( 4 )]
margin_left = 300.0
margin_top = 550.0
margin_right = 312.0
margin_bottom = 570.0
focus_neighbour_top = NodePath("../P1")
focus_neighbour_right = NodePath("../../Enemies/E1")
focus_neighbour_bottom = NodePath("../P3")
Player = true

[node name="P3" parent="AnimationManager/Players" instance=ExtResource( 4 )]
margin_left = 300.0
margin_top = 775.0
margin_right = 312.0
margin_bottom = 795.0
focus_neighbour_top = NodePath("../P2")
focus_neighbour_right = NodePath("../../Enemies/E2")
focus_neighbour_bottom = NodePath("../P0")
Player = true

[node name="Enemies" type="Button" parent="AnimationManager"]
editor/display_folded = true
margin_left = 1112.27
margin_top = 102.869
margin_right = 2012.27
margin_bottom = 1002.87
rect_scale = Vector2( 0.75, 0.75 )
focus_neighbour_left = NodePath("../Players")
disabled = true
flat = true
script = ExtResource( 3 )

[node name="E0" parent="AnimationManager/Enemies" instance=ExtResource( 4 )]
margin_left = 362.873
margin_top = 95.6318
margin_right = 374.873
margin_bottom = 115.632
focus_neighbour_left = NodePath("../../Players/P0")
focus_neighbour_top = NodePath("../E2")
focus_neighbour_right = NodePath("../E3")
focus_neighbour_bottom = NodePath("../E1")

[node name="E1" parent="AnimationManager/Enemies" instance=ExtResource( 4 )]
margin_left = 331.822
margin_top = 436.182
margin_right = 343.822
margin_bottom = 456.182
focus_neighbour_left = NodePath("../../Players/P1")
focus_neighbour_top = NodePath("../E0")
focus_neighbour_right = NodePath("../E3")
focus_neighbour_bottom = NodePath("../E2")

[node name="E2" parent="AnimationManager/Enemies" instance=ExtResource( 4 )]
margin_left = 335.292
margin_top = 810.198
margin_right = 347.292
margin_bottom = 830.198
focus_neighbour_left = NodePath("../../Players/P3")
focus_neighbour_top = NodePath("../E1")
focus_neighbour_right = NodePath("../E4")
focus_neighbour_bottom = NodePath("../E0")

[node name="E3" parent="AnimationManager/Enemies" instance=ExtResource( 4 )]
margin_left = 718.954
margin_top = 277.494
margin_right = 730.954
margin_bottom = 297.494
focus_neighbour_left = NodePath("../E0")
focus_neighbour_top = NodePath("../E4")
focus_neighbour_bottom = NodePath("../E4")

[node name="E4" parent="AnimationManager/Enemies" instance=ExtResource( 4 )]
margin_left = 694.17
margin_top = 660.741
margin_right = 706.17
margin_bottom = 680.741
focus_neighbour_left = NodePath("../E2")
focus_neighbour_top = NodePath("../E3")
focus_neighbour_bottom = NodePath("../E3")

[node name="Log" parent="AnimationManager" instance=ExtResource( 5 )]

[node name="Path2D" type="Path2D" parent="AnimationManager"]
z_index = 25
curve = SubResource( 1 )
script = ExtResource( 6 )
spline_length = 20.0
_smooth = false
_straighten = false

[node name="Background" type="Sprite" parent="."]
position = Vector2( 966.024, 518.53 )
scale = Vector2( 1.96703, 1.51696 )
z_index = -1

[node name="Interface" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 7 )

[node name="Panel" type="Panel" parent="Interface"]
margin_left = 4.0
margin_top = 908.0
margin_right = 1919.0
margin_bottom = 1080.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
custom_styles/panel = ExtResource( 8 )

[node name="Menu" type="VBoxContainer" parent="Interface"]
margin_left = 10.0
margin_top = 912.084
margin_right = 328.0
margin_bottom = 1073.08

[node name="Attack" parent="Interface/Menu" instance=ExtResource( 9 )]
visible = false
margin_right = 318.0
margin_bottom = 28.0
focus_neighbour_top = NodePath("../Run")

[node name="Skill" parent="Interface/Menu" instance=ExtResource( 9 )]
margin_right = 318.0
margin_bottom = 37.0

[node name="Item" parent="Interface/Menu" instance=ExtResource( 9 )]
margin_top = 41.0
margin_right = 318.0
margin_bottom = 78.0

[node name="Lane" parent="Interface/Menu" instance=ExtResource( 9 )]
margin_top = 82.0
margin_right = 318.0
margin_bottom = 119.0

[node name="Run" parent="Interface/Menu" instance=ExtResource( 9 )]
margin_top = 123.0
margin_right = 318.0
margin_bottom = 160.0
focus_neighbour_bottom = NodePath("../Attack")

[node name="Info" type="VBoxContainer" parent="Interface"]
editor/display_folded = true
margin_left = 1080.0
margin_top = 925.0
margin_right = 1756.0
margin_bottom = 1061.0
rect_min_size = Vector2( 676, 136 )
rect_scale = Vector2( 1.2, 1 )
alignment = 1

[node name="P0" parent="Interface/Info" instance=ExtResource( 10 )]
visible = false
margin_top = 2.0
margin_right = 676.0
margin_bottom = 32.0
rect_min_size = Vector2( 664, 30 )
alignment = 2

[node name="P1" parent="Interface/Info" instance=ExtResource( 10 )]
visible = false
margin_top = 19.0
margin_right = 676.0
margin_bottom = 49.0
rect_min_size = Vector2( 664, 30 )
alignment = 2

[node name="P2" parent="Interface/Info" instance=ExtResource( 10 )]
visible = false
margin_top = 36.0
margin_right = 676.0
margin_bottom = 66.0
rect_min_size = Vector2( 664, 30 )
alignment = 2

[node name="P3" parent="Interface/Info" instance=ExtResource( 10 )]
visible = false
margin_top = 53.0
margin_right = 676.0
margin_bottom = 83.0
rect_min_size = Vector2( 664, 30 )
alignment = 2
[connection signal="focus_entered" from="AnimationManager/Players" to="AnimationManager/Players" method="_on_All_focus_entered"]
[connection signal="focus_exited" from="AnimationManager/Players" to="AnimationManager/Players" method="_on_All_focus_exited"]
[connection signal="pressed" from="AnimationManager/Players" to="AnimationManager/Players" method="_on_All_pressed"]
[connection signal="focus_entered" from="AnimationManager/Enemies" to="AnimationManager/Enemies" method="_on_All_focus_entered"]
[connection signal="focus_exited" from="AnimationManager/Enemies" to="AnimationManager/Enemies" method="_on_All_focus_exited"]
[connection signal="pressed" from="AnimationManager/Enemies" to="AnimationManager/Enemies" method="_on_All_pressed"]
[connection signal="button_down" from="Interface/Menu/Attack" to="." method="_on_Attack_button_down"]
[connection signal="button_down" from="Interface/Menu/Skill" to="." method="_on_Skills_button_down"]
[connection signal="button_down" from="Interface/Menu/Item" to="." method="_on_Itens_button_down"]
[connection signal="button_down" from="Interface/Menu/Lane" to="." method="_on_Lane_button_down"]
[connection signal="button_down" from="Interface/Menu/Run" to="." method="_on_Run_button_down"]
